--- a/Gateway-rest-service/complete/pom.xml
+++ b/Gateway-rest-service/complete/pom.xml
@@ -33,6 +33,40 @@
             <artifactId>ciscospark-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        		<!-- Spring & Spring Data MongoDB -->
+<!-- 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency> -->
+		<!-- 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
+		 -->
+		<!-- <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-expression</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
+		 -->
+		<!-- Querydsl -->
+		<!-- 
+		<dependency>
+			<groupId>com.mysema.querydsl</groupId>
+			<artifactId>querydsl-mongodb</artifactId>
+			<version>3.6.9</version>
+		</dependency>
+         -->
     </dependencies>
 
     <properties>
