--- a/Gateway-rest-service/complete/pom.xml
+++ b/Gateway-rest-service/complete/pom.xml
@@ -34,6 +34,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>springloaded</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
